--- a/index.html
+++ b/index.html
@@ -1,52 +1,154 @@
-Skip to content
-adven2066997-coder
-liana
-Repository navigation
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-Owner avatar
-liana
-Public
-Set up GitHub Copilot
-Use GitHub's AI pair programmer to autocomplete suggestions as you code.
-
-Add collaborators to this repository
-Search for people using their GitHub username or email address.
-
-Quick setup — if you’ve done this kind of thing before
-or	
-https://github.com/adven2066997-coder/liana.git
-Get started by creating a new file or uploading an existing file. We recommend every repository include a README, LICENSE, and .gitignore.
-
-…or create a new repository on the command line
-echo "# liana" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/adven2066997-coder/liana.git
-git push -u origin main
-…or push an existing repository from the command line
-git remote add origin https://github.com/adven2066997-coder/liana.git
-git branch -M main
-git push -u origin main
- ProTip! Use the URL for this page when adding GitHub as a remote.
-Footer
-© 2026 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
-Security
-Status
-Community
-Docs
-Contact
-Manage cookies
-Do not share my personal information
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Долго искали, нашли здесь! | Lianafurniture</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        header { background: #f8f8f8; padding: 10px; text-align: center; }
+        nav { background: #333; color: white; padding: 10px; }
+        nav a { color: white; margin: 0 15px; text-decoration: none; }
+        .hero { background: #eee; padding: 50px; text-align: center; }
+        .services { display: flex; justify-content: space-around; padding: 20px; flex-wrap: wrap; }
+        .features { display: flex; justify-content: space-around; padding: 20px; flex-wrap: wrap; }
+        .catalog { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; padding: 20px; }
+        .product { border: 1px solid #ddd; padding: 10px; }
+        .reviews { padding: 20px; }
+        .steps { display: flex; justify-content: space-around; padding: 20px; flex-wrap: wrap; }
+        footer { background: #333; color: white; padding: 20px; text-align: center; }
+    </style>
+</head>
+<body>
+    <header>
+        <p>zakaz@lianafurniture.ru</p>
+        <p>+7 (967) 185-02-26</p>
+    </header>
+    <nav>
+        <a href="#">ГЛАВНАЯ</a>
+        <a href="#">КАТАЛОГ</a>
+        <a href="#">МАТЕРИАЛЫ</a>
+        <a href="#">О НАС</a>
+        <a href="#">ПОРТФОЛИО</a>
+        <a href="#">ПОЛЕЗНОЕ</a>
+        <a href="#">КОНТАКТЫ</a>
+    </nav>
+    <section class="hero">
+        <h1>Интерьер, проработанный до мелочей</h1>
+        <div>BIG SALE - Заголовок второго слайда. В подзаголовке сайта раскройте суть вашего предложения, дополните его цифрами и фактами. <a href="#">Узнать подробнее</a></div>
+        <div>BIG SALE - Заголовок третьего слайда. В подзаголовке сайта раскройте суть вашего предложения, дополните его цифрами и фактами. <a href="#">Узнать подробнее</a></div>
+    </section>
+    <section>
+        <h2>мы производим</h2>
+        <div class="services">
+            <div>Кухни по индивидуальному проекту <a href="#">Узнать больше</a></div>
+            <div>Шкафы и прихожие <a href="#">Узнать больше</a></div>
+            <div>Оформление магазинов и бутиков</div>
+            <div>Ванные комнаты и душевые</div>
+            <div>Гардеробные и системы хранения</div>
+            <div>Мебель для ресторанов и общественных заведений</div>
+        </div>
+        <p><a href="#">Смотерь весь каталог &gt;&gt;</a></p>
+    </section>
+    <section class="features">
+        <div>
+            <h3>КАЧЕСТВО</h3>
+            <p>Соблюдаем высокие стандарты, чтобы вы остались довольны.</p>
+        </div>
+        <div>
+            <h3>БЕЗГРАНИЧНЫЙ ВЫБОР МАТЕРИАЛОВ</h3>
+            <p>От традиционных, проверенных временем - до новейших решений в индустрии.</p>
+        </div>
+        <div>
+            <h3>ВНИМАНИЕ</h3>
+            <p>Учитываем ваши потребности, предпочтения, привычки и характер, чтобы вы получили именно то, что вам нужно.</p>
+        </div>
+        <div>
+            <h3>НАДЕЖНОСТЬ</h3>
+            <p>Работаем "под ключ" и предоставляем гарантию на все изделия.</p>
+        </div>
+    </section>
+    <section>
+        <h2>Примеры наших работ</h2>
+        <p>Мебель различной сложности и назначения -жилая мебель, мебель для общественных заведений, комплексные проекты "под ключ".</p>
+        <div class="catalog">
+            <div class="product">
+                <h4>Кухня Golden Age</h4>
+                <p>В стиле барокко с фасадами из МДФ в белом цвете с позолотой.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня Basic Wood&Gloss</h4>
+                <p>С панельными фасадами из МДФ эмаль и шпона.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня Basic Stripe</h4>
+                <p>Стильное цветовое решение для базовой кухни с панельными фасадами из окрашенной МДФ.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня NewAge Glass</h4>
+                <p>Характерная для Европы 80-х с панельными шпонированными фасадами с акцентом на черном стекле.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня Cassadea</h4>
+                <p>Классическая кухня со всеми характерными элементами.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня Island Wind</h4>
+                <p>Облегченная версия классической кухни с рамочным фасадом и плоской филенкой.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня Scandic Grey</h4>
+                <p>Скандинавский стиль в холодном сером цвете.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня Scandic</h4>
+                <p>с фасадами из МДФ в скандинавском стиле. Тонкая рамка подчеркивает лаконичность и сдержанность стиля.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Оформление торгового зала Ноче Мария Луиза</h4>
+                <p>Витрины для бутика на рынке Садовод.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+            <div class="product">
+                <h4>Кухня Sublime Vision</h4>
+                <p>Кухня с фасадами из МДФ окрашенной в 2 вариантах фактур - гладкая полуматовая и рифленая.</p>
+                <p>0 руб. <button>В корзину</button> <button>Подробнее</button></p>
+            </div>
+        </div>
+    </section>
+    <section class="reviews">
+        <h2>отзывы</h2>
+        <p>Для нас крайне важно ваше мнение.</p>
+        <div>
+            <h4>Долго искали, нашли здесь! Владислав Макаров</h4>
+            <p>Искали с женой в прихожую шкаф. Все магазины обошли в городе — либо дорого, либо не нравится. Увидели объявление Михаила, позвонили, сняли мерки, получили дизайн макет и стоимость. Не раздумывая заказали! Шкаф шикарный!</p>
+        </div>
+        <div>
+            <h4>Лучший сервис, который мы видели. Максим Игорехин</h4>
+            <p>Глаза уже не те, не могу сам кухню собрать. Обратился в фирму Лиана, дак мы не то, что кухню собрали, мы ещё и технику установили, холодильник встроили, розетки вывели и в мебель спрятали. Столешницу сделали как барную стойку. Спасибо!</p>
+        </div>
+        <div>
+            <h4>Отвечают на все вопросы. Маргарита Иванова</h4>
+            <p>Я одна живу, дак вообще ничего не понимаю в этих МДФ, ДСП. А замерщик всё объяснил, что чем хорошо, какие минусы. В итоге сделали коридор и ещё кухню заказала. Выходит дешевле чем в салоне, ещё и сделают всё за тебя и за качество можно не переживать! Супер!</p>
+        </div>
+    </section>
+    <section class="steps">
+        <div><h3>1 Оставьте заявку</h3><p>Напишите, что хотите рассчитать. Напишите нам в Whatsapp</p></div>
+        <div><h3>2 Произведем расчет</h3><p>В нескольких вариантах, чтобы вы могли сравнить предложения</p></div>
+        <div><h3>3 Приедем на замер</h3><p>И согласуем с вами материалы, фурнитуру и прочие детали</p></div>
+        <div><h3>4 Заключаем договор</h3><p>Указываем перечень работ, сроки, стоимость и порядок оплаты</p></div>
+        <div><h3>5 Выполняем работы</h3><p>Сдаем работу, а вы принимаете результат и оплачиваете</p></div>
+    </section>
+    <footer>
+        <p>Есть вопрос? Напишите нам в WhatsApp! zakaz@lianafurniture.ru +7 (967) 185-02-26</p>
+        <p>ГЛАВНАЯ КАТАЛОГ МАТЕРИАЛЫ О НАС ПОРТФОЛИО ПОЛЕЗНОЕ КОНТАКТЫ Работает на LPmotor</p>
+    </footer>
+</body>
+</html>
